fix alignment

--- a/src/App.css
+++ b/src/App.css
@@ -85,11 +85,9 @@
   align-items: center;
   padding: 10px 15px;
   box-shadow: 0 4px 2px -2px rgba(0, 0, 0, 0.2);
-  background: linear-gradient(
-    to left,
-    rgba(0, 0, 230, 0.532),
-    rgba(255, 0, 0, 0.586)
-  );
+  background: linear-gradient(to left,
+      rgba(0, 0, 230, 0.532),
+      rgba(255, 0, 0, 0.586));
 
   list-style: none;
 
@@ -148,7 +146,7 @@
 }
 
 .search-btn {
-  padding:3px;
+  padding: 3px;
   border-radius: 5px 0px 0px 5px;
   border: 1px solid #a91e1e;
 }
@@ -193,11 +191,9 @@
   justify-content: center;
   gap: 20px;
   height: 92vh;
-  background: linear-gradient(
-    to left,
-    rgba(0, 0, 230, 0.374),
-    rgba(255, 0, 0, 0.319)
-  );
+  background: linear-gradient(to left,
+      rgba(0, 0, 230, 0.374),
+      rgba(255, 0, 0, 0.319));
 }
 
 .login-form {
@@ -218,11 +214,7 @@
   align-items: center;
 }
 
-.TextField {
-  border: 1px solid #a00000;
-  padding: 5px;
-  border-radius: 5px 0px 0px 5px;
-}
+
 .TextField:active {
   outline: #a00000;
   border: none;
@@ -265,10 +257,10 @@ Button:focus {
   align-items: center;
   border-radius: 14px;
   flex-wrap: wrap;
- gap: 2px;
-  white-space: nowrap;
-  overflow: hidden;
-  text-overflow: ellipsis;
+  gap: 2px;
+
+
+
 }
 
 /* .movie-card .details-info {
@@ -302,11 +294,9 @@ Button:focus {
 }
 
 .detail-main-con {
-  background: linear-gradient(
-    to left,
-    rgba(0, 0, 230, 0.374),
-    rgba(255, 0, 0, 0.319)
-  );
+  background: linear-gradient(to left,
+      rgba(0, 0, 230, 0.374),
+      rgba(255, 0, 0, 0.319));
   height: 100%;
 }
 
@@ -449,16 +439,17 @@ Button:focus {
 }
 
 .movie-container {
-
   display: flex;
   flex-wrap: wrap;
+
   align-items: center;
   margin: auto;
   text-align: center;
   gap: 30px;
-  justify-content: space-evenly;
+  width: 100%;
+  justify-content: center;
   margin-top: 5px;
- 
+
 }
 
 .cards {
